# networkit-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
bridge/: bridge.cpp  bridge.h  centrality.h  clique.h  coarsening.h  community.h  component.h  correlation.h  distance.h  embedding.h  extra.h  generators.h  graph.h  graph_event.h  link_prediction.h  misc.h  scd.h  sparsification.h  viz.h
src/: base.rs  bridge.rs  builder.rs  centrality.rs  clique.rs  coarsening.rs  community.rs  component.rs  correlation.rs  cover.rs  distance.rs  embedding.rs  flow.rs  generators.rs  graph.rs  independent_set.rs  lib.rs  link_prediction.rs  main.rs  partition.rs  scd.rs  sparsification.rs  tools.rs  viz.rs
tests/: bintest.rs
