[package]
name = "networkit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.23.1"
cxx = "1.0"
openmp-sys = { version = "1.2.3", features = ["static"] }

[build-dependencies]
cmake = "0.1.49"
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
