[package]
name = "networkit-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ziyang Hu"]
description = "Rust bindings for Networkit"
repository = "https://github.com/cozodb/networkit-rs"

exclude = [
    "networkit/input",
    "networkit/extlibs/ttmath/tests2",
    "networkit/extrafiles",
]

[dependencies]
cxx = "1.0"
openmp-sys = { version = "1.2.3", features = ["static"] }
miette = "5.5.0"

[build-dependencies]
cmake = "0.1.49"
cxx-build = "1.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
